--- a/my webby - Copy/about.html
+++ b/my webby - Copy/about.html
@@ -5,6 +5,7 @@
   <title>Projects</title>
   <link rel="stylesheet" href="Cstyles.css" />
   <script src="mainnav.js"></script>
+  <link rel="stylesheet" href="Cabout.css" />
 </head>
 <body>
   <header>
