--- a/my webby - Copy/achievements.html
+++ b/my webby - Copy/achievements.html
@@ -17,6 +17,12 @@
 <body>
   <header>
     <nav>
+
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -38,7 +44,7 @@
 
 
 
-  <div id="achievementCarousel" class="carousel slide" data-ride="carousel">
+  <div id="achievementCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
     
     <div class="carousel-inner">
       
