--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width">
   <title>Homepage</title>
   <link rel="stylesheet" href="Cindex.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-  
 
-  <style>
-    body {
-      /*background: linear-gradient(90deg, rgb(150, 150, 150) 0%, rgb(161, 160, 160) 100%);*/
-    }
-    .homepage-content {
-      color: #fff;
-    }
-  </style>
+
+
+
 </head>
-<body id = "mainbody">
+
+<body id="mainbody">
   <header id="homepage-nav">
-    <div class="logo"><img src="./resources/logo.png" alt="Logo"  id="logomain"></div>
+    <div class="logo"><img src="./resources/logo.png" alt="Logo" id="logomain"></div>
   </header>
   <div class="homepage-content">
     <a class="home-button" href="about.html">About</a>
@@ -28,9 +24,12 @@
     <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">CV</a>
   </div>
   <div id="particles-js"></div>
-  <footer id="mainfoot">
+  <footer id="mainfoot" >
+    <div class="indexfooter"> 
     <p>Portfolio of Sameer Shaboodien</p>
+  </div>
   </footer>
   <script src="particles.js"></script>
 </body>
+
 </html>
