--- a/my webby - Copy/about.html
+++ b/my webby - Copy/about.html
@@ -10,6 +10,12 @@
 <body>
   <header>
     <nav>
+
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
