--- a/my webby - Copy/contact.html
+++ b/my webby - Copy/contact.html
@@ -10,6 +10,11 @@
 <body>
   <header>
     <nav>
+      <div class="hamburger-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -30,7 +35,6 @@
       </p>
 
     </div>
-    <!-- More projects here -->
   </div>
   <footer id ="contactfoot">
     
