--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -17,10 +17,10 @@
     <div class="logo"><img src="./resources/logo.png" alt="Logo" id="logomain"></div>
   </header>
   <div class="homepage-content">
-    <a class="home-button" href="about.html">About</a>
+    <a class="home-button" href="Endorsements.html">Endorsements</a>
     <a class="home-button" href="projects.html">Projects</a>
     <a class="home-button" href="achievements.html">Achievements</a>
-    <a class="home-button" href="contact.html">Contact</a>
+    <a class="home-button" href="Links.html">Links</a>
     <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">CV</a>
   </div>
   <div id="particles-js"></div>
