--- a/my webby - Copy/projects.html
+++ b/my webby - Copy/projects.html
@@ -31,10 +31,10 @@
     </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="Endorsements.html">Endorsements</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Links.html">Links</a></li>
         <li><a href="resources/FINAL CV.pdf" target="_blank">CV</a></li>
       </ul>
     </nav>
@@ -46,6 +46,9 @@
   </div>
   <div class="container">
     <div class="content">
+    
+    
+      <div class="innercont"> 
       <div class="secondary-nav">
         <button class="secondary-nav-button active" onclick="switchProject(1)">Project 1</button>
         <button class="secondary-nav-button" onclick="switchProject(2)">Project 2</button>
@@ -317,6 +320,7 @@
     -->
 
     </div>
+     </div>
   </div>
 </div>
   <div class="arrow arrow-right" onclick="switchProject(currentProject + 1)">
