--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -26,7 +26,8 @@
   <div id="particles-js"></div>
   <footer id="mainfoot" >
     <div class="indexfooter"> 
-    <p>Portfolio of Sameer Shaboodien</p>
+    <h1>Sameer Shaboodien</h1>
+    <p>Electrical Engineer</p>
   </div>
   </footer>
   <script src="particles.js"></script>
