--- a/my webby - Copy/Links.html
+++ b/my webby - Copy/Links.html
@@ -4,6 +4,8 @@
   <meta name="viewport" content="width=device-width">
   <title>Projects</title>
   <link rel="stylesheet" href="Cstyles.css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="mainnav.js"></script>
   <link rel="stylesheet" href="Ccontact.css" />
 </head>
