--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -2,35 +2,34 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
   <link rel="stylesheet" href="Cindex.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-
-
-
-
 </head>
 
 <body id="mainbody">
   <header id="homepage-nav">
-    <div class="logo"><img src="./resources/logo.png" alt="Logo" id="logomain"></div>
+    <!-- <div class="logo"><img src="./resources/logo.png" alt="Logo" id="logomain"></div> -->
   </header>
   <div class="homepage-content">
     <a class="home-button" href="Endorsements.html">Endorsements</a>
     <a class="home-button" href="projects.html">Projects</a>
     <a class="home-button" href="achievements.html">Achievements</a>
-    <a class="home-button" href="Links.html">Links</a>
-    <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">CV</a>
+    <a class="home-button" href="Links.html">Contacts</a>
+    <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">Resume</a>
+  </div>
+  <div class="H2class">
+    <h2 id="animated-text">"Be the change you want to see in the world"</h2>
   </div>
   <div id="particles-js"></div>
-  <footer id="mainfoot" >
-    <div class="indexfooter"> 
-    <h1>Sameer Shaboodien</h1>
-    <p>Electrical Engineer</p>
-  </div>
+  <footer id="mainfoot">
+    <div class="indexfooter">
+      <h1 class="H1class">Sameer Shaboodien</h1>
+      <p class="H1class">Electrical Engineer</p>
+    </div>
   </footer>
-  <script src="particles.js"></script>
+  <!-- <script src="particles.js"></script> -->
 </body>
 
 </html>
