--- a/my webby - Copy/test.html
+++ b/my webby - Copy/test.html
@@ -1,51 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Achievements Carousel</title>
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="Cstyles.css">
-  <link rel="stylesheet" href="Ctest.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liquid Flow Animation</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background-color: #f5f5f5;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <!-- Navigation Content -->
-    </nav>
-  </header>
+    <canvas id="canvas"></canvas>
+    <script>
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-  <div class="achievementsbody">
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <h3>Title One</h3>
-          <p>Para</p>
-        </div>
-        <div class="swiper-slide">
-          <h3>Title Two</h3>
-          <p>Para</p>
-        </div>
-        <div class="swiper-slide">
-          <h3>Title Three</h3>
-          <p>Para</p>
-        </div>
-        <div class="swiper-slide">
-          <h3>Title Four</h3>
-          <p>Para</p>
-        </div>
-        <div class="swiper-slide">
-          <h3>Title Five</h3>
-          <p>Para</p>
-        </div>
-      </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-    </div>
-  </div>
+        const simplex = new SimplexNoise();
 
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="Achievements.js"></script>
+        class Blob {
+            constructor(x, y, radius) {
+                this.x = x;
+                this.y = y;
+                this.radius = radius;
+                this.color = `rgba(100, 100, 100, 0.7)`;
+            }
+            draw() {
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+                ctx.fillStyle = this.color;
+                ctx.fill();
+                ctx.closePath();
+            }
+        }
+
+        const blobs = [];
+
+        function init() {
+            for (let i = 0; i < 10; i++) {
+                let radius = Math.random() * 100 + 50;
+                let x = Math.random() * (canvas.width - 2 * radius) + radius;
+                let y = Math.random() * (canvas.height - 2 * radius) + radius;
+                blobs.push(new Blob(x, y, radius));
+            }
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            for (let i = 0; i < blobs.length; i++) {
+                let blob = blobs[i];
+                blob.x += simplex.noise2D(blob.x * 0.001, blob.y * 0.001) * 2;
+                blob.y += simplex.noise2D(blob.x * 0.001, blob.y * 0.001) * 2;
+                blob.draw();
+            }
+            requestAnimationFrame(animate);
+        }
+
+        init();
+        animate();
+
+        window.addEventListener('resize', function() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            blobs.length = 0;
+            init();
+        });
+
+        // Simplex Noise implementation
+        // You can use a library like simplex-noise.js for better performance
+        function SimplexNoise(random) {
+            if (!random) random = Math.random;
+            this.grad3 = [
+                [1, 1, 0], [-1, 1, 0], [1, -1, 0], [-1, -1, 0],
+                [1, 0, 1], [-1, 0, 1], [1, 0, -1], [-1, 0, -1],
+                [0, 1, 1], [0, -1, 1], [0, 1, -1], [0, -1, -1]
+            ];
+            this.p = [];
+            for (let i = 0; i < 256; i++) {
+                this.p[i] = Math.floor(random() * 256);
+            }
+            this.perm = [];
+            for (let i = 0; i < 512; i++) {
+                this.perm[i] = this.p[i & 255];
+            }
+        }
+
+        SimplexNoise.prototype.noise2D = function (xin, yin) {
+            const grad3 = this.grad3;
+            const perm = this.perm;
+            let n0, n1, n2;
+            const s = (xin + yin) * 0.5 * (Math.sqrt(3) - 1);
+            const i = Math.floor(xin + s);
+            const j = Math.floor(yin + s);
+            const t = (i + j) * (3 - Math.sqrt(3)) / 6;
+            const X0 = i - t;
+            const Y0 = j - t;
+            const x0 = xin - X0;
+            const y0 = yin - Y0;
+            const i1 = x0 > y0 ? 1 : 0;
+            const j1 = x0 > y0 ? 0 : 1;
+            const x1 = x0 - i1 + 1 / 6;
+            const y1 = y0 - j1 + 1 / 6;
+            const x2 = x0 - 1 + 2 / 6;
+            const y2 = y0 - 1 + 2 / 6;
+            const ii = i & 255;
+            const jj = j & 255;
+            const gi0 = perm[ii + perm[jj]] % 12;
+            const gi1 = perm[ii + i1 + perm[jj + j1]] % 12;
+            const gi2 = perm[ii + 1 + perm[jj + 1]] % 12;
+            const t0 = 0.5 - x0 * x0 - y0 * y0;
+            if (t0 < 0) n0 = 0; else {
+                const t02 = t0 * t0;
+                n0 = t02 * t02 * (grad3[gi0][0] * x0 + grad3[gi0][1] * y0);
+            }
+            const t1 = 0.5 - x1 * x1 - y1 * y1;
+            if (t1 < 0) n1 = 0; else {
+                const t12 = t1 * t1;
+                n1 = t12 * t12 * (grad3[gi1][0] * x1 + grad3[gi1][1] * y1);
+            }
+            const t2 = 0.5 - x2 * x2 - y2 * y2;
+            if (t2 < 0) n2 = 0; else {
+                const t22 = t2 * t2;
+                n2 = t22 * t22 * (grad3[gi2][0] * x2 + grad3[gi2][1] * y2);
+            }
+            return 70 * (n0 + n1 + n2);
+        }
+    </script>
 </body>
 </html>
