Fixed bugs Improved Aestethics

--- a/my webby - Copy/Links.html
+++ b/my webby - Copy/Links.html
@@ -22,8 +22,8 @@
         <li><a href="Endorsements.html">Endorsements</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="Links.html">Links</a></li>
-        <li><a href="resources/FINAL CV.pdf" target="_blank">CV</a></li>
+        <li><a href="Links.html">Contact Me</a></li>
+        <li><a href="resources/FINAL CV.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -31,7 +31,7 @@
     <div class="content">
 
       
-
+      <h3>Contacts And Socials</h3>
       <div id="contact-info">
         <div class="contact-item">
           <a href="https://za.linkedin.com/in/sameer-shaboodien" class="icon-link" data-type="linkedin" target="_blank">
