--- a/my webby - Copy/Endorsements.html
+++ b/my webby - Copy/Endorsements.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
   <link rel="stylesheet" href="Cstyles.css" />
   <link rel="stylesheet" href="Cendorsements.css" />
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <header>
@@ -21,8 +19,8 @@
         <li><a href="Endorsements.html">Endorsements</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="Links.html">Links</a></li>
-        <li><a href="resources/FINAL CV.pdf" target="_blank">CV</a></li>
+        <li><a href="Links.html">Contact Me</a></li>
+        <li><a href="resources/FINAL CV.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
