--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -16,7 +16,7 @@
     <a class="home-button" href="Endorsements.html">Endorsements</a>
     <a class="home-button" href="projects.html">Projects</a>
     <a class="home-button" href="achievements.html">Achievements</a>
-    <a class="home-button" href="Links.html">Contacts</a>
+    <a class="home-button" href="Links.html" id="ResumeLink">Contact Me</a>
     <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">Resume</a>
   </div>
   <div class="H2class">
