--- a/my webby - Copy/Endorsements.html
+++ b/my webby - Copy/Endorsements.html
@@ -33,7 +33,7 @@
           <span class="endorsement-text">Octoco</span>
           <img src="resources/icons/new tab.png" alt="New Tab Icon" class="new-tab-icon">
         </div>
-        <div class="endorsement button" onclick="window.open('resources/lantern.pdf', '_blank')">
+        <div class="endorsement button" onclick="window.open('resources/Lantern.pdf', '_blank')">
           <img src="resources/Lanternlogo.png" alt="Company Logo" class="company-logowide">
           <span class="endorsement-text">Lantern Engineering</span>
           <img src="resources/icons/new tab.png" alt="New Tab Icon" class="new-tab-icon">
