--- a/my webby - Copy/index.html
+++ b/my webby - Copy/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="Cindex.css" />
+  <link rel="preload" href="Cindex.css" as="style">
+  <link rel="stylesheet" href="Cindex.css">
+  <link rel="preload" href="resources/pcwallpaper.jpg" as="image">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 </head>
 
 <body id="mainbody">
-  <header id="homepage-nav">
-    <!-- <div class="logo"><img src="./resources/logo.png" alt="Logo" id="logomain"></div> -->
-  </header>
+  <style>
+    #background {
+      background-image: url('resources/pcwallpaper.jpg');
+      background-repeat: no-repeat;
+      background-clip: border-box;
+      background-position: top right;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+  </style>
   <div class="homepage-content">
     <a class="home-button" href="Endorsements.html">Endorsements</a>
     <a class="home-button" href="projects.html">Projects</a>
@@ -20,7 +29,7 @@
     <a class="home-button" href="resources/FINAL CV.pdf" target="_blank">Resume</a>
   </div>
   <div class="H2class">
-    <h2 id="animated-text">"Be the change you want to see in the world"</h2>
+    <h2 id="animated-text">"Be the <span id="underline-change">change</span> you want to see in the world"</h2>
   </div>
   <div id="particles-js"></div>
   <footer id="mainfoot">
@@ -29,7 +38,7 @@
       <p class="H1class">Electrical Engineer</p>
     </div>
   </footer>
-  <!-- <script src="particles.js"></script> -->
+  <script src="underline.js"></script>
 </body>
 
 </html>
